--- a/bricks_analytical.ipynb
+++ b/bricks_analytical.ipynb
@@ -12,23 +12,24 @@
     "           width: 40%; /* Maintain the original width */\n",
     "           object-fit: cover; /* Adjust if necessary */\n",
     "           clip-path: inset(0px 50px 0px 50px round 10px);\" \n",
-    "    src= \"public_html\\_data\\fig\\buildingdamage.svg\"\n",
+    "    src= \".github\\public_html\\fig\\buildingdamage.svg\"\n",
     "/>\n",
     "</figure>\n",
     "\n",
     "\n",
     "<h1 style=\"width: 60%; color: #EC6842; font-size: 55pt;\">\n",
     "    <Strong>\n",
-    "        IJsselsteinseweg 77\n",
+    "        Case study building Analysis \n",
     "    </Strong>\n",
     "</h1>\n",
     "\n",
     "<h2 id=\"Background\"><B>\n",
-    "    Rationale for the project<a class=\"anchor-link\" href=\"#Background\">&#182;</a>\n",
+    "    Rationale of this notebook<a class=\"anchor-link\" href=\"#Background\">&#182;</a>\n",
     "    </B>\n",
     "</h2>\n",
     "<p style=\"text-align: justify; width: 60%; font-weight: normal;\">\n",
-    "     This studies case study is the building IJsselsteinseweg 77 in Nieuwegein in the Netherlands, a deatched 2-layer unreinforced masonry structure from 1961 with 2 floors and a cellar which was eventually demolished circa 2015. We can evaluate the state of damage before its demolishing due to a Foundation research report that was commissioned by the owner to Sandra Lobbe Ispectie & Advies, a building consulting firm who carried out the building and foundation investigation on June 2019 and thereafter produced a report documenting the buildings measurements, characteristics, damage state and their own assessment on the necessary course of action or risk of the building integrity due to subsidence effects. The main assessment found that the current capacity provided by the building’s foundation was Insufficient and given the experienced deformations by the building and the damage state of the building, countermeasures should be implemented in a period of 1-5 years following the assessment date. \n",
+    "     This notebook provides an analytical assessment of a detached, two-story unreinforced masonry structure built in the 1960s and later demolished. The assessment is based on a foundation research report conducted prior to the building's demolition, which documented the structure’s measurements, characteristics, damage state, and the effects of subsidence.\n",
+    "     The report found that the foundation's current capacity was insufficient to support the building’s stability, given the experienced deformations and observed damage. Recommendations were made for countermeasures to address the risks to the building’s integrity due to subsidence effects.\n",
     "</p>"
    ]
   },
@@ -104,31 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x26866297e50>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ijsselsteinseweg.interpolate() # Interpolate subsidence shape\n",
     "ijsselsteinseweg.fit_function(i_guess = 1, tolerance = 1e-2, step = 1) # Fit gaussian shapes to walls\n",
@@ -154,31 +133,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8051/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x268664474c0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ijsselsteinseweg.SRI(tolerance= 0.01) #Compute the SRI parameters\n",
     "report = EM(ijsselsteinseweg.soil['sri'])\n",
@@ -196,31 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8052/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2686794f670>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "limit_line = -1\n",
     "LTSM(ijsselsteinseweg, limit_line, methods = ['greenfield','measurements'])\n",
