--- a/bricks_fea.ipynb
+++ b/bricks_fea.ipynb
@@ -12,7 +12,7 @@
     "           width: 40%; /* Maintain the original width */\n",
     "           object-fit: cover; /* Adjust if necessary */\n",
     "           clip-path: inset(0px 50px 0px 50px round 10px);\" \n",
-    "    src= \"../.github/public_html/fig/Major crack Width development.png\"\n",
+    "    src= \".github/public_html/fig/building_model.svg\"\n",
     "/>\n",
     "</figure>\n",
     "\n",
@@ -24,11 +24,12 @@
     "</h1>\n",
     "\n",
     "<h2 id=\"Background\"><B>\n",
-    "    Rationale for the project<a class=\"anchor-link\" href=\"#Background\">&#182;</a>\n",
+    "    Rationale of this notebook<a class=\"anchor-link\" href=\"#Background\">&#182;</a>\n",
     "    </B>\n",
     "</h2>\n",
     "<p style=\"text-align: justify; width: 60%; font-weight: normal;\">\n",
-    "     This studies case study is the building will also evaluate the capabilities of FEA for the assessment of unreinforced masonry structures undergoing subsidence. For this measure understanding and analysing the capabilities of a finite element analysis are a important part in the validation of the model and the presenting of results. This notebook illustrates some of the different tools built for the analysis of such models and its implementations in different analysis types. Due to the limitations of the analysis output characteristics from DIANA FEA not all components of these analysis are able to have been done algorithmically therefore, it is reccomended to read this modules README.MD notes in order to ensure the different requirements for these analysis are well implemented in your models. \n",
+    "     This notebook presents the Finite Element Analysis (FEA) conducted as part of an investigation into the assessment capabilities of unreinforced masonry structures affected by subsidence. The FEA plays a critical role in understanding and validating the model's ability to predict subsidence-induced damage, focusing on key aspects such as damage severity, location, and patterns.<br><br> \n",
+    "     This case study evaluates the effectiveness of FEA methods, demonstrating their strengths and limitations. The notebook showcases a variety of tools developed for analyzing such models, as well as their implementation across different analysis types. Due to limitations in the output characteristics from DIANA FEA, not all components of the analysis can be fully automated. For this reason, it is recommended to consult the accompanying README.MD for detailed guidance on how to meet the requirements for specific analyses.\n",
     "</p>"
    ]
   },
@@ -60,14 +61,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <strong> 2 | Process runs</strong>"
+    "## <strong> 1 | Process runs</strong>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <strong> 2.1 | Run individual analysis</strong>\n",
+    "### <strong> 1.1 | Run individual analysis</strong>\n",
     "\n",
     "The three main individual plots for the relative displacement, crack width progression and damage level progression"
    ]
@@ -177,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <strong> 2.2 | Run compared analysis</strong>\n",
+    "### <strong> 1.2 | Run compared analysis</strong>\n",
     "\n",
     "The three main individual plots for the relative displacement, crack width progression and damage level progression between models"
    ]
@@ -261,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <strong> 2.3 | Script to take screenshots and videos of models</strong>\n",
+    "### <strong> 1.3 | Script to take screenshots and videos of models</strong>\n",
     "\n",
     "Creates a new directory in the models directory where it stores the contour plots for all the specified result components "
    ]
@@ -325,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <strong> 2.4 | Sensitivity effects on damage study</strong>\n",
+    "### <strong> 1.4 | Sensitivity effects on damage study</strong>\n",
     "\n",
     "From all models the following code the influence of the damage and time against mesh factors"
    ]
@@ -376,9 +377,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <strong> 3 | Calibration</strong>\n",
+    "## <strong> 2 | Calibration</strong>\n",
     "\n",
-    "### <strong> 3.1 | Feature Importance scores</strong>\n",
+    "### <strong> 2.1 | Feature Importance scores</strong>\n",
     "From all the analysis the features are compared against the targets through a random forest to obtain the feature importance scores"
    ]
   },
@@ -461,9 +462,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <strong> 3.2 | Sensitivity Analysis</strong>\n",
+    "### <strong> 2.2 | Sensitivity Analysis</strong>\n",
     "\n",
-    "#### <strong> 3.2.1 | Plotting the GP solution space</strong>"
+    "#### <strong> 2.2.1 | Plotting the GP solution space</strong>"
    ]
   },
   {
@@ -711,7 +712,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <strong> 3.2.2 | Plotting the Kernel, Covariance between variables</strong>"
+    "#### <strong> 2.2.2 | Plotting the Kernel, Covariance between variables</strong>"
    ]
   },
   {
