Changes to repo structure

--- a/bricks_analytical.ipynb
+++ b/bricks_analytical.ipynb
@@ -83,13 +83,13 @@
     "}\n",
     "\n",
     "damage =  {'crack_1' : {'wall_id' : 'Wall 2','c_w': 4,'c_l': 890,},\n",
-    "           #'crack_2' : {'wall_id' : 'Wall 1','c_w': 2,'c_l': 1670,},\n",
-    "           #'crack_3' : {'wall_id' : 'Wall 2','c_w': 3,'c_l': 1868,},\n",
+    "           'crack_2' : {'wall_id' : 'Wall 1','c_w': 2,'c_l': 1670,},\n",
+    "           'crack_3' : {'wall_id' : 'Wall 2','c_w': 3,'c_l': 1868,},\n",
     "           'crack_5' : {'wall_id' : 'Wall 2','c_w': 3,'c_l': 1760,},\n",
-    "           #'crack_6' : {'wall_id' : 'Wall 2','c_w': 3,'c_l': 1200,},\n",
-    "           #'crack_7' : {'wall_id' : 'Wall 2','c_w': 2,'c_l': 600,},\n",
+    "           'crack_6' : {'wall_id' : 'Wall 2','c_w': 3,'c_l': 1200,},\n",
+    "           'crack_7' : {'wall_id' : 'Wall 2','c_w': 2,'c_l': 600,},\n",
     "           'crack_9' : {'wall_id' : 'Wall 2','c_w': 2,'c_l': 994,},\n",
-    "           #'crack_10': {'wall_id' : 'Wall 2','c_w': 2,'c_l': 980,}\n",
+    "           'crack_10': {'wall_id' : 'Wall 2','c_w': 2,'c_l': 980,}\n",
     "           }\n",
     "\n",
     "ijsselsteinseweg = house(measurements = walls)\n",
@@ -167,7 +167,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TUD-JF",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
