__init__ in analytical change

--- a/bricks/bricks_analytical.ipynb
+++ b/bricks/bricks_analytical.ipynb
@@ -38,12 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import analytical as ba\n",
-    "from analytical.assessment.tools.plots import *\n",
     "\n",
     "import numpy as np"
    ]
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,37 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1b470451c00>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ijsselsteinseweg.interpolate() # Interpolate subsidence shape\n",
     "ijsselsteinseweg.fit_function(i_guess = 1, tolerance = 1e-2, step = 1) # Fit gaussian shapes to walls\n",
     "\n",
     "params = ijsselsteinseweg.soil['house'].values()\n",
-    "app = subsurface(ijsselsteinseweg, *params)\n",
+    "app = ba.subsurface(ijsselsteinseweg, *params)\n",
     "app.run_server(port=8050, debug=False)"
    ]
   },
@@ -150,36 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8051/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1b470573f10>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ijsselsteinseweg.SRI(tolerance= 0.01) #Compute the SRI parameters\n",
     "report = ba.EM(ijsselsteinseweg.soil['sri'])\n",
     "\n",
-    "app = EM_plot(report)\n",
+    "app = ba.EM_plot(report)\n",
     "app.run_server(port=8051, debug=False)"
    ]
   },
@@ -192,36 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8052/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1b470917e80>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "limit_line = -1\n",
     "ba.LTSM(ijsselsteinseweg, limit_line, methods = ['greenfield','measurements'])\n",
     "\n",
-    "app = LTSM_plot(ijsselsteinseweg)    \n",
+    "app = ba.LTSM_plot(ijsselsteinseweg)    \n",
     "app.run_server(port=8052, debug=True, dev_tools_ui=False)"
    ]
   }
